<resources>
    <string name="app_name">Займы онлайн</string>
    <string name="start_login_button">Войти</string>
    <string name="start_register_button">Зарегестрироваться</string>
    <string name="login_user">Логин</string>
    <string name="password_user">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегестрироваться</string>
    <string name="manual_to_bank">Для получения вашего вклада в банке вам необходимо:\n
    Обратиться в ближайшее отделение банка;\n
    Заполнить заявление на получения вклада;\n
    При заполнении заявления вам необходимо сообщить сотруднику ваши данные:\n
        • Имя;\n
        • Фамилию;\n
        • Номер телефона;\n
        • Дату;\n\n
    После заполнения заявления обратиться в кассу вашего отделения банка для получения
    денежных средств;
    </string>
    <string name="manual_to_card">Для оформления займа на карту вам необходимо:\n
    Обратиться в ближайшее отделение банка;\n
    Заполнить заявление на получения вклада;\n
    При заполнении заявления вам необходимо сообщить сотруднику ваши данные:\n
        • Имя;\n
        • Фамилию;\n
        • Номер телефона;\n
        • Дату;\n
        • Реквизиты карты\n\n
    После заполнения заявления, на карту по указанным реквезитам в течении 24ч будет
        переведен вклад;</string>
    <string name="warning_authorization">Не заполнены логин и пароль</string>
    <string name="fragment_start">Займы онлайн</string>
    <string name="fragment_login">Авторизация</string>
    <string name="fragment_register">Регистрация</string>
    <string name="fragment_apply">Оформление</string>
    <string name="fragment_manual">Инструкция</string>
    <string name="fragment_loans">История займов</string>
    <string name="fragment_loan">Займ</string>
    <string name="fragment_manual_bank">Получить в банке</string>
    <string name="fragment_manual_card">Получить на карту</string>
    <string name="loans">Займы</string>
    <string name="apply_period">Одобренный период:</string>
    <string name="apply_percent">Одобренный процент:</string>
    <string name="max_amount">Максимальная сумма:</string>
    <string name="apply_title">Вам одобрены следующие условия:</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="apply_phone">Номер телефона</string>
    <string name="sum">Сумма</string>
    <string name="apply">Оформить займ</string>
    <string name="cancel">Отказаться</string>
    <string name="first_name_title">Имя:</string>
    <string name="last_name_title">Фамилия:</string>
    <string name="data_title">Дата:</string>
    <string name="phone_title">Номер телефона:</string>
    <string name="sum_title">Сумма:</string>
    <string name="period_title">Период:</string>
    <string name="percent_title">Процент:</string>
    <string name="apply_conditions_title">Вам одобрены следующие условия:</string>
    <string name="status_title">Статус:</string>
    <string name="manual_to_bank_btn">Как получить в банке?</string>
    <string name="manual_to_card_btn">Как оформить на карту?</string>
    <string name="success_register">Регистрация прошла успешно</string>
    <string name="empty_fields">Данные не заполнены</string>
    <string name="update_history">Обновить список</string>
    <string name="apply_help">Помощь</string>
    <string name="applyHelpInfo">Заполните ваши личные данные в соответствующие поля</string>
    <string name="history_loans">История</string>
    <string name="apply_loan">Оформление</string>
    <string name="how_get">Получение</string>
    <string name="logout">Выйти</string>
    <string name="item_sum_loan">Сумма займа:</string>
    <string name="item_date_loan">Дата займа:</string>
    <string name="item_status_loan">Статус займа:</string>
    <string name="apply_success">Оформление займа прошло успешно.</string>
    <string name="empty_list">У вас нет оформленных займов</string>
    <string name="profile">Профиль</string>
    <string name="fragment_profile">Профиль</string>
    <string name="loan_conditions">Условия займа</string>
    <string name="borrower_title">Заёмщик</string>
    <string name="prefNumber">+7</string>
    <string name="helpNumberText">Длина номера</string>
    <string name="login_not_correct">Не корректный логин. Логин может содержать строчные, прописные буквы, цифры. Минимальная длина 2 символа.</string>
    <string name="password_not_correct">Не корректный пароль. Пароль может содержать строчные, прописные буквы, цифры. Минимальная длина 5 символа</string>
</resources>