<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/loansFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/history_loans" />
    <item
        android:id="@id/applyFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="@string/apply_loan" />
    <item
        android:id="@id/manualFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/how_get" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>