<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.applyloan.ApplyLoanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loanDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/apply_period"
            app:layout_constraintStart_toStartOf="@id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@id/loanLastNameTitle" />

        <TextView
            android:id="@+id/periodConditionsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/applyConditionsBarrier"
            app:layout_constraintTop_toBottomOf="@+id/percentConditionsValue"
            tools:text="42" />

        <TextView
            android:id="@+id/loanLastNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/apply_percent"
            app:layout_constraintStart_toStartOf="@id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@id/loanFirstNameTitle" />

        <TextView
            android:id="@+id/percentConditionsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/applyConditionsBarrier"
            app:layout_constraintTop_toBottomOf="@+id/amountConditionsValue"
            tools:text="13.5%" />

        <TextView
            android:id="@+id/TitleConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/apply_title"
            app:layout_constraintEnd_toStartOf="@id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@id/START_MARGIN"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loanFirstNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/max_amount"
            app:layout_constraintStart_toStartOf="@id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@id/TitleConditions" />

        <TextView
            android:id="@+id/amountConditionsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/applyConditionsBarrier"
            app:layout_constraintTop_toBottomOf="@+id/TitleConditions"
            tools:text="15000.00" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/applyConditionsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="loanFirstNameTitle,
loanLastNameTitle, loanDateTitle"
            tools:layout_editor_absoluteX="168dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/START_MARGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/END_MARGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <Button
            android:id="@+id/applyLoanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelLoanBtn"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN" />

        <Button
            android:id="@+id/cancelLoanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toEndOf="@+id/applyLoanBtn"
            app:layout_constraintTop_toTopOf="@+id/applyLoanBtn" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLoanTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/lastNameLoanTextField"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/loanDateTitle"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLoanTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/last_name"
            app:layout_constraintBottom_toTopOf="@+id/phoneLoanTextField"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLoanTextField"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLoanTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/apply_phone"
            app:counterEnabled="true"
            app:counterMaxLength="13"
            app:helperText="@string/helpNumberText"
            app:layout_constraintBottom_toTopOf="@+id/sumLoanTextField"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLoanTextField"
            app:prefixText="@string/prefNumber"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sumLoanTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/sum"
            app:layout_constraintBottom_toTopOf="@+id/seekBarSum"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"

            app:layout_constraintTop_toBottomOf="@+id/phoneLoanTextField"
            app:startIconDrawable="@drawable/ic_baseline_currency_ruble_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/seekBarSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/applyLoanBtn"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/sumLoanTextField" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/applyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="amountConditionsValue,applyLoanBtn,
            firstNameLoanTextField,sumLoanTextField,loanFirstNameTitle,
            percentConditionsValue,seekBarSum,TitleConditions,loanDateTitle,
            loanLastNameTitle,periodConditionsValue,cancelLoanBtn,
            lastNameLoanTextField,phoneLoanTextField" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toTopOf="@+id/TitleConditions" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
