<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.RegisterFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerTextFieldLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/login_user"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/registerTextFieldUserPassword"
        app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
        app:layout_constraintStart_toEndOf="@+id/START_MARGIN"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerTextFieldUserPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_user"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:layout_constrainedWidth="true"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
        app:layout_constraintStart_toEndOf="@+id/START_MARGIN"
        app:layout_constraintTop_toBottomOf="@+id/registerTextFieldLogin"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/END_MARGIN"
        app:layout_constraintStart_toEndOf="@+id/START_MARGIN"
        app:layout_constraintTop_toBottomOf="@+id/registerTextFieldUserPassword" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="@+id/registerButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/START_MARGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/END_MARGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>