<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/amountItemTxtTitle"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_sum_loan"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toTopOf="@+id/TOP_MARGIN" />

        <TextView
            android:id="@+id/amountItemTxt"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleItemBarrier"
            app:layout_constraintTop_toTopOf="@+id/TOP_MARGIN"
            tools:text="15000.00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/START_MARGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/END_MARGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/TOP_MARGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/dateItemTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/item_date_loan"
            app:layout_constraintStart_toStartOf="@+id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/amountItemTxtTitle" />

        <TextView
            android:id="@+id/dateItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/titleItemBarrier"
            app:layout_constraintTop_toTopOf="@+id/dateItemTxtTitle"
            tools:text="22.01.21" />

        <TextView
            android:id="@+id/statusItemTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/item_status_loan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/START_MARGIN"
            app:layout_constraintTop_toBottomOf="@id/dateItemTxtTitle" />

        <TextView
            android:id="@+id/statusItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/titleItemBarrier"
            app:layout_constraintTop_toTopOf="@+id/statusItemTxtTitle"
            tools:text="Зарегистрировано" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/titleItemBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="statusItemTxtTitle,
amountItemTxtTitle, dateItemTxtTitle" />

        <ImageView
            android:id="@+id/statusImageView"
            android:layout_width="20dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/status_item_loan"
            tools:background="@color/yellow" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>